No Disc Error when starting Blender #34929

Closed
opened 2013-04-08 23:51:15 +02:00 by Robert Broughton · 7 comments

%%%--- Operating System, Graphics card ---
Windows 7 Pro with a ati 5770 Radeon Card

- Blender version with error, and version that worked ---

In Blender 2.66.1 released version

- Short description of error ---

When trying to start blender, it will only show "No disc" error. It will not allow the system to bypass the error or ignore it. It will just keep repeating the popup of "No Disk" for the DVD drive.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

What the problem ended up being is that the file "C:\Robert Broughton\AppData\Roaming\Blender Foundation/Blender\2.66\config\recent-files.txt" had listed some files on the removable DVD drive in its list:
"C:\Users\Robert Broughton\Documents\Blender\Practice\untitled.blend
C:\Users\Robert Broughton\Documents\Blender\Practice\Test.blend
D:\Users\Blender\Models\headmesh.blend"

So when the DVD was removed, Blender would not start, it would only give the "No Disc" error.
Two temporary work around is to 1. Put the removable DVD back in, 2. Modify the "recent-files.txt" file so it doesn't have the D: drive file in the list. However, the fix would be to allow blender to continue even if it can't find a removable file.

Thanks for the great SW.
Bob%%%

%%%--- Operating System, Graphics card --- Windows 7 Pro with a ati 5770 Radeon Card - Blender version with error, and version that worked --- In Blender 2.66.1 released version - Short description of error --- When trying to start blender, it will only show "No disc" error. It will not allow the system to bypass the error or ignore it. It will just keep repeating the popup of "No Disk" for the DVD drive. - Steps for others to reproduce the error (preferably based on attached .blend file) --- What the problem ended up being is that the file "C:\Robert Broughton\AppData\Roaming\Blender Foundation/Blender\2.66\config\recent-files.txt" had listed some files on the removable DVD drive in its list: "C:\Users\Robert Broughton\Documents\Blender\Practice\untitled.blend C:\Users\Robert Broughton\Documents\Blender\Practice\Test.blend D:\Users\Blender\Models\headmesh.blend" So when the DVD was removed, Blender would not start, it would only give the "No Disc" error. Two temporary work around is to 1. Put the removable DVD back in, 2. Modify the "recent-files.txt" file so it doesn't have the D: drive file in the list. However, the fix would be to allow blender to continue even if it can't find a removable file. Thanks for the great SW. Bob%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%I tried to redo the issue but couldn't, with Blender 2.66a on Windows 7 64 bit. Steps I tried:

  • Insert DVD, open Blender, open .blend file, close Blender
  • Eject DVD
  • Open Blender again

> All that happens here is that the entry is not listed anymore in recent files.

Is this a new issue in 2.66 or did it happen in 2.65 too? The code to detect if a file exists changed recently, so perhaps it's because of that. But I don't see anything particularly suspicious there.%%%

%%%I tried to redo the issue but couldn't, with Blender 2.66a on Windows 7 64 bit. Steps I tried: * Insert DVD, open Blender, open .blend file, close Blender * Eject DVD * Open Blender again # > All that happens here is that the entry is not listed anymore in recent files. Is this a new issue in 2.66 or did it happen in 2.65 too? The code to detect if a file exists changed recently, so perhaps it's because of that. But I don't see anything particularly suspicious there.%%%

%%%Here is what I just tried and it showed the error again.
1, Put the Track Match Blend disc into the DVD drive.
2. Go to the DVD D:/blendfiles/01_introduction/01_1pointtrack/1pointtrack.blend and open the 1pointtrack.blend file in blender
3. Save file on Windows Desktop
2. Go to the DVD D:/blendfiles/01_introduction/01_2pointtrack/2pointtrack.blend and open the 2pointtrack.blend file in blender
4. Save the file on Windows Desktop
5. Quit Blender normally.
6. Remove the DVD disc.
7. Open Blender. Error repeats.

If you only do it with one file, then you will have the option of continuing. It only happens when I open two or more different files then save them to the local drive.

Note: It can be any 2 blend files loaded from the DVD drive and saved to the desktop after opening, it doesn't have to be the TRACK MATCH BLEND disc.

I didn't try this under 2.65, but I didn't have any blend files on the DVD.

Hopefully this allow you to replicate it.
Thanks
Bob
%%%

%%%Here is what I just tried and it showed the error again. 1, Put the Track Match Blend disc into the DVD drive. 2. Go to the DVD D:/blendfiles/01_introduction/01_1pointtrack/1pointtrack.blend and open the 1pointtrack.blend file in blender 3. Save file on Windows Desktop 2. Go to the DVD D:/blendfiles/01_introduction/01_2pointtrack/2pointtrack.blend and open the 2pointtrack.blend file in blender 4. Save the file on Windows Desktop 5. Quit Blender normally. 6. Remove the DVD disc. 7. Open Blender. Error repeats. If you only do it with one file, then you will have the option of continuing. It only happens when I open two or more different files then save them to the local drive. Note: It can be any 2 blend files loaded from the DVD drive and saved to the desktop after opening, it doesn't have to be the TRACK MATCH BLEND disc. I didn't try this under 2.65, but I didn't have any blend files on the DVD. Hopefully this allow you to replicate it. Thanks Bob %%%
Member

%%%I am able to reproduce this with 2.66.5 r55932 and with 2.66.0 r54697.

Versions 2.64 and 2.65 don't dipslay this behaviour. Here they just skip missing entries.

The easiest way to reproduce is to add an entry in recent-files.txt to a file on a removable disk. I.e. I added E:\blends\tutorials\critters.blend from the mancandy faq as entry, then made sure nothing was in the drive. Starting Blender then gives the error message. One can continue by pressing the Continue button, though.%%%

%%%I am able to reproduce this with 2.66.5 r55932 and with 2.66.0 r54697. Versions 2.64 and 2.65 don't dipslay this behaviour. Here they just skip missing entries. The easiest way to reproduce is to add an entry in recent-files.txt to a file on a removable disk. I.e. I added E:\blends\tutorials\critters.blend from the mancandy faq as entry, then made sure nothing was in the drive. Starting Blender then gives the error message. One can continue by pressing the Continue button, though.%%%

%%%What happens with me is if there is two or three files in the recent-files.txt that point to a removable drive, then the Continue button won't work either. It then has to be stopped by the task manager.%%%

%%%What happens with me is if there is two or three files in the recent-files.txt that point to a removable drive, then the Continue button won't work either. It then has to be stopped by the task manager.%%%

%%%I was able to redo the issue now on another computer, and the problem happened also in 2.64 and 2.65.

Fix in svn now, thanks for the report.%%%

%%%I was able to redo the issue now on another computer, and the problem happened also in 2.64 and 2.65. Fix in svn now, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34929
No description provided.